<resources>
    <string name="app_name">EUSLkuppiya</string>
    <string name="enter_now">ENTER NOW</string>
    <string name="home_sub_hed">We Love to see you again</string>
    <string name="degree_Home_intxt">  Select your Degree</string>
    <string name="semester_Home_intxt">  Select your semester</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="faculty_Home_intxt">Select your Faculty</string>
    <string name="eusl_app">E U S L A P P</string>
    <string name="welcome">WELCOME</string>
    <string name="name">Name</string>
    <string name="faculty_name">Faculty</string>
    <string name="degree">Degree</string>
    <string name="registation_number">Reg. Number</string>
    <string name="index_number">Index Number</string>
    <string name="student_area">Student AREA</string>

    <string name="count_initial_value">0</string>
    <string name="button_label">Send</string>
    <string name="toast_message">Hurra!</string>
    <string name="input_placeholder">Write a message</string>
    <string name="chat_room">Chat Room</string>
</resources>