<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg5"
    android:id="@+id/view_root">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/profile"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_home_white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_menu_w"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/TextPrimary"
                android:textSize="50dp"
                android:fontFamily="@font/backer_town"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eusl_app"
                android:textSize="20dp"
                android:textColor="#BA0C0C"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="12dp"
                android:id="@+id/view2"
                app:cardCornerRadius="40dp"
                android:layout_centerHorizontal="true"
                android:onClick="changePropic">

                <ImageView
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:id="@+id/iv_profile"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/TextPrimary"
            android:textSize="15dp"
            android:layout_marginEnd="20dp"
            android:paddingLeft="10dp"
            android:fontFamily="@font/segoeui"/>

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bg_intxt_prof"
            android:paddingLeft="10dp"
            android:textSize="12dp"
            android:textColor="@color/Divider"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/faculty_name"
            android:textColor="@color/TextPrimary"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/segoeui"/>

        <EditText
            android:id="@+id/ufname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bg_intxt_prof"
            android:paddingLeft="10dp"
            android:textSize="12dp"
            android:textColor="@color/Divider"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView

            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/degree"
            android:textColor="@color/TextPrimary"
            android:textSize="15dp"
            android:paddingStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/segoeui"/>

        <EditText
            android:id="@+id/udname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bg_intxt_prof"
            android:paddingLeft="10dp"
            android:textSize="12dp"
            android:textColor="@color/Divider"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/registation_number"
            android:textColor="@color/TextPrimary"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/segoeui"/>

        <EditText
            android:id="@+id/urnumber"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bg_intxt_prof"
            android:paddingLeft="10dp"
            android:textSize="12dp"
            android:textColor="@color/Divider"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/index_number"
            android:textColor="@color/TextPrimary"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/segoeui"/>

        <EditText
            android:id="@+id/uinnum"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bg_intxt_prof"
            android:paddingLeft="10dp"
            android:textSize="12dp"
            android:textColor="@color/Divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_btn"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:elevation="8dp"
            android:onClick="save">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:fontFamily="sans-serif-medium"
                android:gravity="end"
                android:text="SAVE"
                android:textSize="20dp"
                android:textColor="@color/TextPrimary" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="start"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start"
                    android:background="@drawable/ic_save"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>